Remocao dos Loren ipsum

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -148,7 +148,7 @@
               realizar um monitoramento constante e detalhado do hardware dos
               seus servidores.
             </p>
-            <a href="#" class="btn-learn-more">Cadastrar-se</a>
+            <a href="./cadastro_empresa.html" class="btn-learn-more">Cadastrar-se</a>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
 
 
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Nosso Produto ======= -->
     <section id="services" class="services bg-services" >
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -279,7 +279,7 @@
         </div>
       </div>
     </section>
-    <!-- End Services Section -->
+    <!-- End Nosso Produto -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -338,26 +338,27 @@
 
     <!-- End Skills Section -->
 
-    <!-- ======= Cta Section ======= -->
-    <!-- <section id="cta" class="cta">
+    <!-- ======= SLA ======= -->
+    <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Fale conosco</h3>
+            <h3>Está tendo problemas?</h3>
             <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-              cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.
+              Está com dificuldade em entrar com contato conosco? Não se 
+              preocupe. Basta clicar no botão, que você será direcionado 
+              para nossa consultoria. Mas entes, verifique nossas 
+              dúvidas frequentes, talvez seu problema seja resolvido 
+              com mais rapidez.
             </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="https://app.pipefy.com/public/form/Z1V5F_be">Clique aqui!</a>
           </div>
         </div>
       </div>
-    </section> -->
-    <!-- End Cta Section -->
+    </section>
+    <!-- End SLA -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -491,7 +492,7 @@
     </section>
     <!-- End Team Section -->
 
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Nossos Preços ======= -->
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -503,14 +504,46 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
-              <h3>Plano mensal</h3>
+              <h3>Plano mensal Bronze</h3>
               <h4><sup>R$</sup>200,00<span>por mês</span></h4>
               <ul>
+                <li>
+                  <i class="bx bx-check"></i> Alertas em tempo real
+                </li>
+                <li>
+                  <i class="bx bx-check"></i> Monitoramento de CPU
+                </li>
+                <li><i class="bx bx-check"></i> Monitoramento da RAM
+                </li>
+                <li>
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento do Dico
+                </li>
+                <li>
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento da Temperatura
+                </li>
+                <li>
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento de Rede
+                </li>
+              </ul>
+              <a href="./cadastro_empresa.html" class="buy-btn">
+                Adquira já
+              </a>
+            </div>
+          </div>
+
+          <div
+            class="col-lg-4 mt-4 mt-lg-0"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="box featured">
+              <h3>Plano mensal Prata</h3>
+              <h4><sup>R$</sup>600,00<span>por mês</span></h4>
+              <ul>
+                <li>
+                  <i class="bx bx-check"></i> Alertas em tempo real
+                </li>
                 <li>
                   <i class="bx bx-check"></i> Monitoramento de CPU
                 </li>
@@ -520,33 +553,67 @@
                   <i class="bx bx-check"></i> Monitoramento do Dico
                 </li>
                 <li>
-                  <i class="bx bx-check"></i> Monitoramento da Temperatura
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento da Temperatura
                 </li>
                 <li>
-                  <i class="bx bx-check"></i> Monitoramento de Rede
+                  <i><img src="./assets/img/x_incon.png" alt="" width="25%"></i> Monitoramento de Rede
                 </li>
               </ul>
-              <a href="#" class="buy-btn">
+              <a href="./cadastro_empresa.html" class="buy-btn">
                 Adquira já
               </a>
             </div>
           </div>
 
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-
+          <div
+            class="col-lg-4 mt-4 mt-lg-0"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            
+          <div class="box featured">
+            <h3>Plano mensal Ouro</h3>
+            <h4><sup>R$</sup>1.000,00<span>por mês</span></h4>
+            <ul>
+              <li>
+                <i class="bx bx-check"></i> Alertas em tempo real
+              </li>
+              <li>
+                <i class="bx bx-check"></i> Monitoramento de CPU
+              </li>
+              <li><i class="bx bx-check"></i> Monitoramento da RAM
+              </li>
+              <li>
+                <i class="bx bx-check"></i> Monitoramento do Dico
+              </li>
+              <li>
+                <i class="bx bx-check"></i> Monitoramento da Temperatura
+              </li>
+              <li>
+                <i class="bx bx-check"></i> Monitoramento de Rede
+              </li>
+              
+            </ul>
+            <a href="./cadastro_empresa.html" class="buy-btn">
+              Adquira já
+            </a>
+          </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Pricing Section -->
+    <!-- End Nossos preços -->
 
-    <!-- ======= Frequently Asked Questions Section ======= -->
+    <!-- ======= Dúvidas Frequentes ======= -->
     <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Perguntas frequentes</h2>
+          <h2>Dúvidas Frequentes</h2>
           <p>
-            Nossos novos clientes normalmente fazem algumas perguntas e para agilizar este processo de contato, aqui estão as duvidas mais frequentes
+            Caso Tenha ficado alguma dúvida, aqui estão algumas 
+            dúvidas recorrentes de nossos clientes que pode se 
+            adequar a seu caso. Mas caso ainda tenha ficado alguma dúvida, 
+            não hesite em nos contatar em nossa sentral de ajuda.
           </p>
         </div>
 
@@ -554,80 +621,118 @@
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at
-                lectus urna duis?
-                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
+              <a
+                data-bs-toggle="collapse"
+                class="collapse"
+                data-bs-target="#faq-list-1"
+                >Como sei qual o melhor plano para minha empresa?
+                <i class="bx bx-chevron-down icon-show"></i
+                ><i class="bx bx-chevron-up icon-close"></i
+              ></a>
+              <div
+                id="faq-list-1"
+                class="collapse show"
+                data-bs-parent=".faq-list"
+              >
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
-                  volutpat lacus laoreet non curabitur gravida. Venenatis
-                  lectus magna fringilla urna porttitor rhoncus dolor purus
-                  non.
+                  Depende das necessidades de seu hardware. Se seu 
+                  problema frequente foi a falha de superaquecimento, 
+                  pode ser problemas na CPU ou no disco. Vel lebrar que 
+                  todos os planos são ótimos, e personalizaveis. Mas o 
+                  plano mais indicado seria o nosso plano mensal prata.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius
-                morbi enim nunc?
-                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
+              <a
+                data-bs-toggle="collapse"
+                data-bs-target="#faq-list-2"
+                class="collapsed"
+                >Após a contratação, quais outros benefícios terei?
+                <i class="bx bx-chevron-down icon-show"></i
+                ><i class="bx bx-chevron-up icon-close"></i
+              ></a>
+              <div
+                id="faq-list-2"
+                class="collapse"
+                data-bs-parent=".faq-list"
+              >
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Id interdum velit laoreet id donec ultrices.
-                  Fringilla phasellus faucibus scelerisque eleifend donec
-                  pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                  ultrices eros in cursus turpis massa tincidunt dui.
+                  Além de receber alertas na dashboard, a empresa recebera 
+                  uma conta de acesso na plataforma de Help Desck Pipfy e 
+                  Slack, onde poderá se comunicar com os membros da equipe 
+                  sobre o probblema e destinar pessoas específicas para cada 
+                  tarefa ou previsões de incidentes feitas por nosso sistema.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur
-                adipiscing elit?
-                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
+              <a
+                data-bs-toggle="collapse"
+                data-bs-target="#faq-list-3"
+                class="collapsed"
+                >Senti que nenhum plano se encaixou na minha necessidade?
+                <i class="bx bx-chevron-down icon-show"></i
+                ><i class="bx bx-chevron-up icon-close"></i
+              ></a>
+              <div
+                id="faq-list-3"
+                class="collapse"
+                data-bs-parent=".faq-list"
+              >
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                  sagittis orci. Faucibus pulvinar elementum integer enim. Sem
-                  nulla pharetra diam sit amet nisl suscipit. Rutrum tellus
-                  pellentesque eu tincidunt. Lectus urna duis convallis
-                  convallis tellus. Urna molestie at elementum eu facilisis
-                  sed odio morbi quis
+                  Entre em contato com nossa equipe, assim poderemos entender 
+                  e atender melhor sua necessidade. 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec
-                nam aliquam sem et tortor
-                consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
+              <a
+                data-bs-toggle="collapse"
+                data-bs-target="#faq-list-4"
+                class="collapsed"
+                >Preciso comprar um plano por servidor? <i class="bx bx-chevron-down icon-show"></i
+                ><i class="bx bx-chevron-up icon-close"></i
+              ></a>
+              <div
+                id="faq-list-4"
+                class="collapse"
+                data-bs-parent=".faq-list"
+              >
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo.
-                  Dignissim suspendisse in est ante in. Nunc vel risus commodo
-                  viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
-                  bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Não. Nossos planos são para sua empresa, e em nossos dashboards,
+                  você terá a possibilidade de cadastrar mais servidores, e eles
+                  não necessáriamente precisam estar na mesma empresa ou setor.
+                  Mas, dependendo da quantidade de servidores, poderá ser cobrado
+                  tachas adicionais.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="500">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus
-                ornare. Varius vel pharetra vel
-                turpis nunc eget lorem dolor?
-                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+              <a
+                data-bs-toggle="collapse"
+                data-bs-target="#faq-list-5"
+                class="collapsed"
+                >No cadastro, só o funcionário cadastrado, terá acesso a dashboard?
+                <i class="bx bx-chevron-down icon-show"></i
+                ><i class="bx bx-chevron-up icon-close"></i
+              ></a>
+              <div
+                id="faq-list-5"
+                class="collapse"
+                data-bs-parent=".faq-list"
+              >
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo.
-                  Mauris vitae ultricies leo integer malesuada nunc vel.
-                  Tincidunt eget nullam non nisi est sit amet. Turpis nunc
-                  eget lorem dolor sed. Ut venenatis tellus in metus vulputate
-                  eu scelerisque.
+                  Não! Dentro de nossas dashboards, você tera acesso de gestor, que te dará
+                  permição para adicionar e/ou remover funcionários cadastrados.
                 </p>
               </div>
             </li>
@@ -635,15 +740,18 @@
         </div>
       </div>
     </section>
-    <!-- End Frequently Asked Questions Section -->
+    <!-- End Dúvidas Frequentes -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>contato</h2>
+          <h2>Contato</h2>
           <p>
-            Entre em contato com a nossa equipe!
+            Não encontrou um plano que se adeuqe melhor a sua empresa? 
+              Ficou com alguma dúvia? Tem alguma reclamação a fazer? Não tem problema!
+              Mande um email abaixo para nossa equipe. 
+              Preencha os campos abaixo, e responderemos assim que pudermos!
           </p>
         </div>
 
@@ -653,22 +761,27 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Endereço:</h4>
-                <p>Avenida Rebouças nº 15, COnsolaçao, São paulo, SP</p>
+                <p>Rua Haddock Lobo 595, São paulo, SP - 01414905</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p></p>
+                <p>eyesonserver2@outlook.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Telefone:</h4>
-                <p>+55 11 955555555</p>
+                <p>+55 11 95589 55488</p>
               </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.332086354539!2d-46.666810426047924!3d-23.55651367880313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce582c8cece6fb%3A0x570d6b11321dd84e!2zQXYuIFJlYm91w6dhcywgMTUgLSBDb25zb2xhw6fDo28sIFPDo28gUGF1bG8gLSBTUCwgMDU0MDItMDAw!5e0!3m2!1spt-BR!2sbr!4v1695748011555!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
+              <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.28609508249!2d-46.66153800000003!3d-23.55816619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59d2a5270055%3A0x3c7ea4f4c7d51fb6!2sRua%20Haddock%20Lobo%2C%20595%20-%20Cerqueira%20C%C3%A9sar%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001414-001!5e0!3m2!1spt-BR!2sbr!4v1697736435682!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                  frameborder="0"
+                  style="border: 0; width: 100%; height: 290px"
+                  allowfullscreen
+                ></iframe>
+            </div>
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
@@ -684,7 +797,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Titulo</label>
+                <label for="name">Assunto</label>
                 <input type="text" class="form-control" name="subject" id="subject" required />
               </div>
               <div class="form-group">
@@ -719,11 +832,10 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Eyes on Server</h3>
             <p>
-              Avenida Rebouças nº 15 Consolaçao, São paulo, SP <br />
-              Consolaçao, São paulo, SP<br />
-              Brasil <br /><br />
-              <strong>Phone:</strong> +55 11 95555555<br />
-              <strong>Email:</strong> <br />
+              Rua Haddock Lobo 595, São Paulo - 01414905P<br />
+              São Paulo - Brasil <br /><br />
+              <strong>Phone:</strong> +55 11 95589 55488<br />
+              <strong>Email:</strong> eyesonserver2@outlook.com<br />
             </p>
           </div>
 
