--- a/site/public/dashboard/funcionarios.html
+++ b/site/public/dashboard/funcionarios.html
@@ -211,6 +211,7 @@
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Cadastrar</h6>
                         </div>
+                        <!--babidi-->
                         <div class="card-body">
                             <form class="user">
                                 <div class="form-group">
@@ -248,7 +249,7 @@
                                             id="id_confSenhaUsuarioCadastrar" placeholder="Repetir Senha">
                                     </div>
                                 </div>
-                                <a onclick="teste()" class="btn btn-primary btn-user btn-block">
+                                <a onclick="cadastrarFuncionario()" class="btn btn-primary btn-user btn-block">
                                     Cadastrar
                                 </a>
                             </form>
@@ -430,12 +431,19 @@
     mudar_resolucao();
     listar_usuario();
 
-    function cadastrar_usuario(){
+    function cadastrarFuncionario(){
         var nome = id_nomeUsuarioCadastrar.value;
         var email = id_emailUsuarioCadastrar.value;
         var senha = id_senhaUsuarioCadastrar.value;
         var conf_senha = id_confSenhaUsuarioCadastrar.value;
-
+        var fkEmpresa = sessionStorage.FK_EMPRESA;
+        var cargo;
+        if(cargo1.checked){
+            cargo = cargo1.value;
+        }else if(cargo2.checked){
+            cargo = cargo2.value;
+        }
+        console.log(nome, email,senha, conf_senha, cargo, fkEmpresa)
         fetch("/user/cadastrar", {
             method: "POST",
             headers: {
@@ -445,12 +453,14 @@
                 nome_html: nome,
                 email_html: email,
                 senha_html: senha,
-                conf_senha_html: conf_senha
+                conf_senha_html: conf_senha,
+                fk_empresa: fkEmpresa,
+                cargo_html: cargo
             })
         }).then(function (resposta) {
             
             if (resposta.ok){
-                alert("Cadastrado com sucesso!");
+               alert("Cadastrado com sucesso!");
             }else{
                 throw("Houve um erro ao tentar cadastrar!");
             }
@@ -458,7 +468,7 @@
             console.log(`#ERRO AO CADASTRAR: ${resposta}`);
         });
         return false;
-    }
+    } 
 
     function consultar_usuario(){
         var id_user = id_idUsuarioConsultar.value
